[feature/state-editor] fix state parameter scrollbar

--- a/src/assets/css/ide.css
+++ b/src/assets/css/ide.css
@@ -1185,7 +1185,7 @@ a {
 	position: absolute;
 	display: none;
 	top: 56px;
-	left: 215px;
+	left: 435px;
 }
 
 .help-tip-body:after {
